--- a/style.css
+++ b/style.css
@@ -384,10 +384,11 @@ a img.aligncenter {
     background-color: rgb(1, 32, 54);
     display: block;
     left: 0;
-    position: relative;
+    position: fixed;
     right: 0;
     top: 0;
     width: 100%;
+    
 	-webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.30);
 	-moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.30);
 	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.30);
@@ -553,7 +554,7 @@ li.social-links a {
 
 
 .slider-content-area {
-    height: 65vh;
+    height: 80vh;
     position: relative;
 }
 
@@ -804,7 +805,7 @@ li.social-links a {
 }
 
 .section.db {
-    background-color: #1f1f1f;
+    background-color: #938a8a;
 }
 
 .section.color1 {
@@ -1414,7 +1415,7 @@ li.social-links a {
     padding-top: 10px;
     font-size: 19px;
     font-style: normal;
-    color: #cdd51f;
+    color: #000;
     padding-bottom: 0;
 }
 
@@ -1573,6 +1574,10 @@ hr.invis1 {
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
     z-index: 1;
+}
+
+.subheading{
+    color: blue;
 }
 
 
@@ -1766,7 +1771,7 @@ hr.invis1 {
     border-radius: 10px;
     font-size: 26px;
 	color: #ffffff;
-    background-color: #cdd51f;
+    background-color: #e32019;
     margin: 0 auto 22px;
     position: relative;
     text-align: center;
@@ -2254,9 +2259,9 @@ select.mobile-device {
 
 .footer {
     padding: 90px 0 80px !important;
-    color: #999;
-    background-color: #393939;
-    background-image: url("uploads/registration-bg.png");
+    color: #fff;
+    background-color: #686866;
+   /* background-image: url("uploads/registration-bg.png");*/
 }
 
 .footer .widget-title {
@@ -3484,5 +3489,22 @@ select.mobile-device {
     slidein 3s ease-in 1s infinite reverse both running;
 }
 
+.separator{
+    border-top-style: solid;
+    border-top-color: #000;
+    margin: 10vh;
+    border-top-width: 2px;
+
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px;  
+    /*
+    justify-content: center;
+    width: 60%;
+    display:block;*/
+}
+.widget-title p{
+    color: #fff;
+}
 
 
